tests/typecheck/should_run/T19397S.hs
module T19397S where

main :: IO ()
main = putStrLn "T19379S-main"

foo :: IO ()
foo = putStrLn "T19379S-foo"
