tests/typecheck/should_fail/T13292a.hs
module T13292a( someFunc ) where

--someFunc :: IO ()
someFunc = return ()
